mpi: Provide the function prototype of __udiv_qrnnd.

* mpi/longlong.h [__alpha] (__udiv_qrnnd): Add the prototype.
[__hppa] (__udiv_qrnnd): Likewise.
[__sparc__] (__udiv_qrnnd): Likewise.

--

Cherry-pick master commit of:
	b61a7661d017c37bbc867a61a75213986954796b

GnuPG-bug-id: 7721
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>